--- a/examples/1.default.html
+++ b/examples/1.default.html
@@ -68,7 +68,7 @@
                 ]
 
                 // Initialize gallery with default settings (no config passed)
-                await new LumosaicGallery("gallery", images).init()
+                await new Lumosaic("gallery", images).init()
             }
 
             // Initialize when page loads
